# test_amgx

./: .gitignore  CMakeLists.txt  SOLVER_CONFIG.json  amgx_config.json  amgx_mpi_capi_sanity.c  build.sh  generate_mtx_from_bin.py  generate_partition_vector.py  permute_bin_by_partition.py  plot_sparsity_from_bin.py  submit.sh  submit_mpi.sh  test_amgx.cu  test_amgx_mpi.cu  write.py
cmake/: FindAMGX.cmake
